--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "_headers",
+                "input": ".",
+                "output": "."
               }
             ],
             "styles": [
